# gh-issues-bot

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml
src/: bot.rs  config.rs  github.rs  main.rs  persistence.rs
