[package]
name = "gh-issues-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
regex = "1.9"
rand = "0.8"
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
octocrab = "0.32"
async-trait = "0.1"
